[workspace]
resolver = "2"
members = [
  "sdk/gproxy-sdk",
  "sdk/gproxy-protocol",
  "sdk/gproxy-channel",
  "sdk/gproxy-engine",
  "crates/gproxy-core",
  "crates/gproxy-storage",
  "crates/gproxy-api",
  "crates/gproxy-server",
  "apps/gproxy",
  "apps/gproxy-recorder",
]

# Release strategy for the SDK crates on crates.io:
#
# The four public SDK crates — gproxy-protocol, gproxy-channel,
# gproxy-engine, gproxy-sdk — follow **lock-step versioning** against
# `workspace.package.version` below. Bumping that single field bumps
# all four, which matches the way they reference each other via
# `{ workspace = true }` in each crate's `[dependencies]` section and
# avoids the per-crate bookkeeping that independent versioning would
# require.
#
# Tooling: use `cargo release` (or `release-plz` once we opt in) to
# automate the workspace-wide bump + publish sequence. Publish order
# respects the dependency DAG:
#   1. gproxy-protocol   (no internal deps)
#   2. gproxy-channel    (depends on gproxy-protocol)
#   3. gproxy-engine     (depends on gproxy-protocol + gproxy-channel)
#   4. gproxy-sdk        (facade, depends on all three)
#
# Manual publish recipe (until the tooling is wired in):
#
#   cargo publish -p gproxy-protocol
#   sleep 30                            # let the registry index update
#   cargo publish -p gproxy-channel
#   sleep 30
#   cargo publish -p gproxy-engine
#   sleep 30
#   cargo publish -p gproxy-sdk
#
# Pre-flight verification:
#
#   cargo publish -p gproxy-protocol --dry-run    # works standalone
#   cargo package -p gproxy-channel --list        # lists what would ship
#   cargo package -p gproxy-engine --list
#   cargo package -p gproxy-sdk --list
#
# Note: `cargo publish --dry-run` for gproxy-channel / -engine / -sdk
# will FAIL with "no matching package named `gproxy-protocol` found"
# until gproxy-protocol is actually published, because cargo strips
# the `path` from the published manifest and tries to resolve the dep
# through the registry. Use `cargo package --list` to verify the
# tarball contents locally; the full registry-side verification only
# becomes possible after the upstream crate has landed on crates.io.
#
# The app-side crates (gproxy-core, gproxy-storage, gproxy-api,
# gproxy-server, apps/gproxy, apps/gproxy-recorder) are private
# (`publish = false` or not listed in crates.io) and inherit the same
# workspace version purely for convenience — they are not published.
#
# This resolves Open Question §7 from the SDK layer refactor spec
# (docs/superpowers/specs/2026-04-13-sdk-layer-refactor-design.md).
[workspace.package]
version = "1.0.22"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["LeenHawk <leenhawk@leenhawk.com>"]
description = "A high-performance LLM proxy server written in Rust."
homepage = "https://gproxy.leenhawk.com"
repository = "https://github.com/LeenHawk/gproxy"
readme = "README.md"

[workspace.dependencies]
# Internal SDK crates. Each declaration carries both `path` (for local
# development builds) and `version` (needed at `cargo publish` time —
# crates.io rejects path-only internal deps). Keep the version string
# in lock-step with `workspace.package.version` above.
gproxy-sdk = { path = "sdk/gproxy-sdk", version = "1.0.22" }
gproxy-protocol = { path = "sdk/gproxy-protocol", version = "1.0.22" }
gproxy-channel = { path = "sdk/gproxy-channel", version = "1.0.22", default-features = false }
gproxy-engine = { path = "sdk/gproxy-engine", version = "1.0.22", default-features = false }

# Internal App crates
gproxy-core = { path = "crates/gproxy-core" }
gproxy-storage = { path = "crates/gproxy-storage" }
gproxy-api = { path = "crates/gproxy-api" }
gproxy-server = { path = "crates/gproxy-server" }

# External dependencies
arc-swap = "1"
anyhow = "1"
argon2 = "0.5"
async-stream = "0.3"
axum = { version = "0.8", features = ["http2", "json", "ws"] }
base64 = "0.22"
bytes = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
ed25519-dalek = "2"
futures-util = "0.3"
getrandom = "0.4"
http = "1"
http-body-util = "0.1"
inventory = "0.3"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
mime_guess = "2"
mimalloc = { version = "0.1", default-features = false }
rand = "0.10"
regex = "1"
rust-embed = "8"
sea-orm = { version = "2.0.0-rc.37", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "with-time", "with-uuid", "with-json", "schema-sync", "entity-registry"] }
sea-orm-migration = { version = "2.0.0-rc.37", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "with-time", "with-uuid", "with-json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
subtle = "2"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "mysql", "postgres"] }
thiserror = "2"
tiktoken-rs = "0.11"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tokio-tungstenite = "0.29"
toml = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4", "v5", "v7"] }
wreq = { version = "6.0.0-rc.28", features = ["json", "cookies", "socks", "stream", "deflate", "gzip", "zstd", "brotli", "ws", "multipart"] }
wreq-util = "3.0.0-rc.10"
zip = "8"

# Recorder-specific
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
rcgen = "0.14"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
tokio-socks = "0.5"
webpki-roots = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
