[package]
name = "gproxy-recorder"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "HTTP/SOCKS recording proxy for capturing LLM API traffic"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
flate2 = "1"
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-socks = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webpki-roots = { workspace = true }
