[package]
name = "gproxy-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "HTTP API server combining provider routes and admin management."
homepage.workspace = true
repository.workspace = true

[dependencies]
gproxy-core = { workspace = true }
gproxy-sdk = { workspace = true }
gproxy-server = { workspace = true }
gproxy-storage = { workspace = true }
argon2 = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
ed25519-dalek = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
rand = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
wreq = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
