[package]
name = "gproxy-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
gproxy-core = { workspace = true }
gproxy-sdk = { workspace = true }
gproxy-protocol = { workspace = true }
gproxy-channel = { workspace = true }
gproxy-engine = { workspace = true }
gproxy-storage = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
ed25519-dalek = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
wreq = { workspace = true }
wreq-util = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
