[package]
name = "gproxy-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
gproxy-core = { workspace = true }
gproxy-sdk = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
sqlx = { workspace = true }
base64 = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
