[package]
name = "gproxy-channel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Single-channel LLM client layer: Channel trait, concrete channels (OpenAI, Anthropic, Gemini, Vertex, Kiro, ...), credential/request/response types, and the execute_once single-attempt pipeline. L1 layer of the gproxy SDK."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["llm", "openai", "anthropic", "api-client", "proxy"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
# Vendored upstream reference material (gemini-cli, codex-rs, and other
# third-party sources) lives under `src/channels/upstream_docs/` for
# research / documentation purposes. None of it is compiled into the
# crate — it's purely reference material — and together it weighs
# ~564 MB, which would blow past the crates.io 10 MB package size limit.
# Exclude it from the published tarball.
exclude = ["src/channels/upstream_docs/**"]

[features]
default = ["all-channels"]
all-channels = [
    "openai", "anthropic", "aistudio", "vertexexpress",
    "vertex", "geminicli", "claudecode", "codex",
    "antigravity", "nvidia", "deepseek", "groq", "openrouter", "vercel", "custom",
    "kiro",
    "chatgpt"
]
openai = []
chatgpt = []
anthropic = []
aistudio = []
vertexexpress = []
vertex = []
geminicli = []
claudecode = []
codex = []
antigravity = []
nvidia = []
deepseek = []
groq = []
openrouter = []
vercel = []
custom = []
kiro = []

[dependencies]
gproxy-protocol = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
getrandom = { workspace = true }
http = { workspace = true }
inventory = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tiktoken-rs = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
wreq = { workspace = true }
wreq-util = { workspace = true }

[dev-dependencies]
# Needed by integration tests that spin up a local mock upstream.
axum = { workspace = true }
tracing-subscriber = { workspace = true }
