[package]
name = "gproxy-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-channel LLM orchestration engine: GproxyEngine, ProviderStore, retry + credential affinity, routing consumer, pluggable rate-limit / quota / affinity backends, and framework-independent routing helpers. L2 layer of the gproxy SDK."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["llm", "proxy", "gateway", "routing", "failover"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[features]
default = ["all-channels"]
all-channels = [
    "gproxy-channel/all-channels",
    "openai", "anthropic", "aistudio", "vertexexpress",
    "vertex", "geminicli", "claudecode", "codex", "chatgpt",
    "antigravity", "nvidia", "deepseek", "groq", "openrouter", "vercel", "custom",
    "kiro"
]
openai = ["gproxy-channel/openai"]
anthropic = ["gproxy-channel/anthropic"]
aistudio = ["gproxy-channel/aistudio"]
vertexexpress = ["gproxy-channel/vertexexpress"]
vertex = ["gproxy-channel/vertex"]
geminicli = ["gproxy-channel/geminicli"]
claudecode = ["gproxy-channel/claudecode"]
codex = ["gproxy-channel/codex"]
chatgpt = ["gproxy-channel/chatgpt"]
antigravity = ["gproxy-channel/antigravity"]
nvidia = ["gproxy-channel/nvidia"]
deepseek = ["gproxy-channel/deepseek"]
groq = ["gproxy-channel/groq"]
openrouter = ["gproxy-channel/openrouter"]
vercel = ["gproxy-channel/vercel"]
custom = ["gproxy-channel/custom"]
kiro = ["gproxy-channel/kiro"]

[dependencies]
gproxy-protocol = { workspace = true }
gproxy-channel = { workspace = true }
async-stream = { workspace = true }
arc-swap = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
wreq = { workspace = true }
wreq-util = { workspace = true }
