[package]
name = "aether-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared crypto compatibility helpers for Rust migration"

[dependencies]
aes.workspace = true
base64.workspace = true
cbc.workspace = true
hmac.workspace = true
pbkdf2.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
