[package]
name = "aether-oauth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared OAuth abstractions for Aether identity and provider account flows"

[dependencies]
aether-contracts.workspace = true
async-trait.workspace = true
base64.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
